testsuite/tests/rep-poly/RepPolyRecordUpdate.stderr

RepPolyRecordUpdate.hs:7:35: error:
    • The newtype constructor pattern
      does not have a fixed runtime representation.
      Its type is:
        a :: TYPE rep
    • In the pattern: MkX {fld = fld}
      In an equation for ‘fld’: fld MkX {fld = fld} = fld

RepPolyRecordUpdate.hs:7:35: error:
    The first pattern in the equation for ‘fld’
    does not have a fixed runtime representation.
    Its type is:
      X a :: TYPE rep

RepPolyRecordUpdate.hs:13:9: error:
    • The record update at field ‘fld’
      does not have a fixed runtime representation.
      Its type is:
        a0 :: TYPE c1
      Cannot unify ‘rep’ with the type variable ‘c1’
      because it is not a concrete ‘RuntimeRep’.
    • In the expression: x {fld = meth ()}
      In an equation for ‘upd’: upd x = x {fld = meth ()}
    • Relevant bindings include
        upd :: X b -> X a (bound at RepPolyRecordUpdate.hs:13:1)
